20. Final Mega Capstone Project/projects/01-python-commerce-microservices/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: commerce-python
  labels:
    app.kubernetes.io/part-of: commerce
    pod-security.kubernetes.io/enforce: restricted
